--- a/Beautiful.html
+++ b/Beautiful.html
@@ -55,6 +55,7 @@
         <p class="one">hello</p>
         <p class="one">Hi</p>
         <p>Bye</p>
+        <p>I am learning Github</p>
         <img src="file:///G:/[qoloub.com].friends.avishek.jpg" alt="">
     </body>
 </html>
