--- a/Beautiful.html
+++ b/Beautiful.html
@@ -56,6 +56,7 @@
         <p class="one">Hi</p>
         <p>Bye</p>
         <p>I am learning Github</p>
+        <p>Good Luck with that</p>
         <img src="file:///G:/[qoloub.com].friends.avishek.jpg" alt="">
     </body>
 </html>
