--- a/Beautiful.html
+++ b/Beautiful.html
@@ -57,6 +57,6 @@
         <p>Bye</p>
         <p>I am learning Github</p>
         <p>Good Luck with that</p>
-        <img src="file:///G:/[qoloub.com].friends.avishek.jpg" alt="friends">
+        <img src="[qoloub.com].friends.avishek.jpg" alt="friends">
     </body>
 </html>
