learning about second branch

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p>Bye</p>
         <p>I am learning Github</p>
         <p>Good Luck with that</p>
+        <p>adding my second branch</p>
         <img src="[qoloub.com].friends.avishek.jpg" alt="friends">
     </body>
 </html>
