--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <p>I am learning Github</p>
         <p>Good Luck with that</p>
         <p>adding my second branch</p>
+        <p><a href="https://www.linkedin.com/in/avishektalukder004/">linkedin profile</a></p>
         <img src="[qoloub.com].friends.avishek.jpg" alt="friends">
     </body>
 </html>
