--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p class="one">Hi</p>
         <p>Bye</p>
         <p>I am learning Github</p>
-        <p>Good Luck with this</p>
+        <p>Good Luck with this Github</p>
         <p>adding my second branch</p>
         <p><a href="https://www.linkedin.com/in/avishektalukder004/">linkedin profile</a></p>
         <img src="[qoloub.com].friends.avishek.jpg" alt="friends">
